--- a/bootstrap_stater/src/main/resources/templates/commute/commute_list.html
+++ b/bootstrap_stater/src/main/resources/templates/commute/commute_list.html
@@ -14,26 +14,22 @@
 	
 	        <!-- Page Heading -->
 	        <h1 class="h3 mb-2 text-gray-900">근태관리 출퇴근현황</h1>
-	        <p class="mb-4">검색창</p>
+	        
+	        <!-- 출근버튼 -->
+            <div class="mb-3">
+            	<button id="checkInBtn" class="btn btn-primary" th:data-empid="${empId}">출근</button>
+            </div>
+	                
 	        <!-- DataTales Example -->
 	        <div class="card shadow mb-4">
 	            <div class="card-header py-3">
 	                <h6 class="m-0 font-weight-bold text-primary">근태관리 출퇴근현황</h6>
-	                <button id="checkInBtn" class="Split Button Seconday">출근</button>
 	            </div>
 	            <div class="card-body">
 	                <div class="table-responsive">
 	                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
 	                        <thead>
 		                        <tr>
-<!-- 		                            <th>날짜</th> -->
-<!-- 		                            <th>사번</th> -->
-<!-- 		                            <th>부서</th> -->
-<!-- 		                            <th>직책</th> -->
-<!-- 		                            <th>이름</th> -->
-<!-- 		                            <th>출근시간</th> -->
-<!-- 		                            <th>퇴근시간</th> -->
-<!-- 		                            <th>근무상태</th> -->
 		                            <th>근태코드</th>
 		                            <th>출근시간</th>
 		                            <th>퇴근시간</th>
@@ -72,7 +68,29 @@
 		<script>
 			$("#checkInBtn").click(function() {
 				console.log("출근 버튼 클릭됨")
-				$.post("/attendence/checkIn", function(data) {
+				
+// 				$.ajax({
+// 					url: "/attendance/checkIn",
+// 					type: "POST",
+// 					dataType: "json",
+// 					success: function(data) {
+						
+// 						if(!data) { // CommuteDTO 데이터가 null이라면
+// 							console.error("서버에서 출근 기록을 받지 못했습니다.");
+// 							return;
+// 						}
+						
+// 						// checkOutTime 이게 널이면 빈문자열로 처리
+// 						const checkOutTime = data.checkOutTime ? data.checkOutTime : "";
+						
+// 						let row =
+// 					}
+// 				});
+				
+				
+				
+				
+				$.post("/attendance/checkIn", function(data) {
 					let row = `<tr>
 						<td>${data.commuteId}</td>
 						<td>${data.checkInTime}</td>
