--- a/bootstrap_stater/src/main/resources/templates/admin/commonCode.html
+++ b/bootstrap_stater/src/main/resources/templates/admin/commonCode.html
@@ -17,7 +17,7 @@
 		<div class="row">
 			<div class="col-6">
 					<div class="card shadow mb-4">
-						<div class="card-header py-3 d-flex justify-content-between align-items-center">
+						<div class="card-header py-3 d-flex justify-content-between align-items-center" style="background-color: #f3f4f7;">
                                 <h6 class="m-0 font-weight-bold">상위공통코드</h6>
 							<div>
 								<button type="button" class="btn btn-primary btn-sm"  data-bs-toggle="modal" data-bs-target="#commonCodeModal">등록</button>
@@ -58,7 +58,7 @@
 		  
 			<div class="col-6">
 				<div class="card shadow mb-4">
-					<div class="card-header py-3 d-flex justify-content-between align-items-center">
+					<div class="card-header py-3 d-flex justify-content-between align-items-center" style="background-color: #f3f4f7;">
 						<h6 class="m-0 font-weight-bold">상세공통코드</h6>
 						<div>
 							<button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#commonDetailModal">등록</button>
