--- a/bootstrap_stater/src/main/resources/templates/main.html
+++ b/bootstrap_stater/src/main/resources/templates/main.html
@@ -49,11 +49,11 @@
 									<form class="user" method="post" action="/login">
 										<div class="form-group">
 											<input type="text" class="form-control form-control-user"
-												name="username" placeholder="사원번호를 입력하세요">
+												name="empId" placeholder="사원번호를 입력하세요">
 										</div>
 										<div class="form-group">
 											<input type="password" class="form-control form-control-user"
-												name="password" id="exampleInputPassword"
+												name="empPasswd" id="exampleInputPassword"
 												placeholder="비밀번호를 입력하세요">
 										</div>
 										<div class="form-group">
