공통코드 검색창 구현중

--- a/bootstrap_stater/src/main/resources/templates/admin/commonCodeDetail.html
+++ b/bootstrap_stater/src/main/resources/templates/admin/commonCodeDetail.html
@@ -9,7 +9,7 @@
 				<th>등록일</th>
 			</tr>
 	    </thead>
-	    <tbody>
+	    <tbody id="smallTableBody">
 	    	<tr th:if="${dtCodes.isEmpty()}">
             	<td colspan="5" class="text-center">등록된 상세코드가 없습니다.</td>
         	</tr>
