--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
@@ -4,14 +4,15 @@
       layout:decorate="~{layouts/layout}">
 <head>
     <th:block layout:fragment="style">
-        <link rel="stylesheet" th:href="@{/personnel/css/personnel.regist.css}" />
     </th:block>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+	<link href="/personnel/css/personnel.regist.css" rel="stylesheet" type="text/css">
+    
 </head>
 <body>
 <th:block layout:fragment="content">
@@ -33,33 +34,59 @@
                     <table class="eTable">
                         <tbody>
                             <tr>
+                                <td rowspan="3" class="text-center">
+                                    <div class="photo-wrapper1">
+                                        <img id="pFIle" name="pFIle" alt="" >
+<!--                                         	th:attr="src=${personnel.photoUrl} ? ${personnel.photoUrl} : '/images/default-profile.png'"> -->
+                                    </div>
+                                </td>
                                 <th scope="row" class="custom-th">
                                     <label for="emp_nm" class="form-label">이름</label></th>
                                 <td colspan="3" class="custom-td">
                                     <input type="text" class="form-control w-75" id="emp_nm" name="name" th:value="${personnel.name}"></td>
-                                
-                                <th scope="row" class="custom-th">
-                                    <label for="emp_pass" class="form-label">비밀번호</label></th>
-                                <td colspan="3" class="custom-td">
-                                    <input type="text" class="form-control w-75" id="emp_pass" name="passwd" th:value="${personnel.passwd}"></td>
-                                
+
                                 <th scope="row" class="custom-th">
                                     <label for="emp_ph" class="form-label">전화번호</label></th>
                                 <td colspan="3" class="custom-td">
                                     <input type="text" class="form-control w-75" id="emp_ph" name="phone" th:value="${personnel.phone}">
                                     <span id="checkPhoneResult"></span>
                                 </td>
-                                
+
+                                <th scope="row" class="custom-th">
+                                    <label for="emp_bd" class="form-label">주민등록번호</label></th>
+                                <td colspan="3" class="custom-td">
+                                    <input type="text" class="form-control w-75" id="emp_bd" name="resident" th:value="${personnel.resident}" readonly></td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row" class="custom-th">
+                                    <label for="emp_pass" class="form-label">패스워드</label></th>
+                                <td colspan="3" class="custom-td">
+                                    <input type="text" class="form-control w-75" id="emp_pass" name="passwd" th:value="${personnel.passwd}"></td>
                                 <th scope="row">
                                     <label for="emp_em" class="form-label">이메일</label></th>
                                 <td colspan="3">
                                     <input type="text" class="form-control w-75" id="emp_em" name="email" th:value="${personnel.email}">
                                     <span id="checkEmailResult"></span>
                                 </td>
+                                <th scope="row">
+                                    <label for="emp_yn" class="form-label">재직현황</label></th>
+                                <td colspan="3">
+                                    <select id="emp_yn" name="status" class="form-select w-75">
+                                        <option value="재직" th:selected="${personnel.status == '재직'}">재직</option>
+                                        <option value="휴직" th:selected="${personnel.status == '휴직'}" disabled>휴직</option>
+                                        <option value="퇴사" th:selected="${personnel.status == '퇴사'}" disabled>퇴사</option>
+                                    </select>
+                                </td>
                             </tr>
                         </tbody>
                         <tbody>
                             <tr>
+                                <td rowspan="3" class="text-center">
+                                    <div class="photo-wrapper-regist">
+                                        <input class="form-control" type="file" id="emp_pi" name="file1" onchange="employeePhoto(event);">
+                                    </div>
+                                </td>
                                 <th scope="row" class="custom-th">
                                     <label for="dep_nm" class="form-label">부서명</label></th>
                                 <td colspan="3">
@@ -70,7 +97,7 @@
                                         </th:block>
                                     </select>
                                 </td>
-                                
+
                                 <th scope="row" class="custom-th">
                                     <label for="emp_gd" class="form-label">직책</label></th>
                                 <td colspan="3">
@@ -82,11 +109,38 @@
                                     </select>
                                 </td>
                             </tr>
+
+                            <tr>
+                                <th scope="row">
+                                    <label for="emp_pc" class="form-label">우편번호</label></th>
+                                <td colspan="3">
+                                    <input type="text" class="form-control w-75" id="emp_pc" name="addrNum" th:value="${personnel.addrNum}"></td>
+                                <td colspan="3">
+                                    <button type="button" class="btn btn-primary btn-sm" id="btnSearchAddress">주소검색</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row" class="custom-th">
+                                    <label for="emp_ad" class="form-label">기본주소</label></th>
+                                <td colspan="3" class="custom-td">
+                                    <input type="text" class="form-control w-75" id="emp_ad" name="addr1" th:value="${personnel.addr1}"></td>
+                                <th scope="row" class="custom-th">
+                                    <label for="emp_ba" class="form-label">상세주소</label></th>
+                                <td colspan="3" class="custom-td">
+                                    <input type="text" class="form-control w-75" id="emp_ba" name="addr2" th:value="${personnel.addr2}"></td>
+                                    
+                                <th scope="row" class="custom-th-r">
+                                    <label for="emp_hd" class="form-label">입사일</label></th>
+                                <td colspan="3" class="custom-td">
+                                    <input type="date" class="form-control w-75" id="emp_hd" name="joinDate" th:value="${#dates.format(personnel.joinDate, 'yyyy-MM-dd')}" readonly></td>
+                            </tr>
                         </tbody>
                     </table>
                     
+                    <br> <br>
                     <div align="right">
-                        <button type="button" class="btn btn-primary btn-sm" onclick="history.back()">취소</button>
+                        <button type="button" class="btn btn-secondary btn-icon-split" onclick="history.back()">취소</button>
                         <button type="submit" class="btn btn-primary btn-sm" id="updateBtn">수정</button>
                     </div>
                 </form>
@@ -96,6 +150,7 @@
 </th:block>
 
 <th:block layout:fragment="script">
+
 </th:block>
 </body>
 </html>
