--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelRegist.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelRegist.html
@@ -3,16 +3,17 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout}">
 <head>
+
     <!-- 개별페이지 CSS 영역 -->
     <th:block layout:fragment="style">
-        <!--        <link rel="stylesheet" th:href="@{/css/item_main.css}" />-->
+
     </th:block>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
-<link href="/personnel/css/personnel.regist.css" rel="stylesheet" type="text/css">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+	<link href="/personnel/css/personnel.regist.css" rel="stylesheet" type="text/css">
     
 </head>
 <body>
@@ -36,26 +37,17 @@
 							<table class="eTable">
 								<tbody>
 									<tr>
-									
-									
 										<!--******************* 사진 *******************-->
-										<!-- 
 										<td rowspan="3" class="text-center">
 											<div class="photo-wrapper1">
 												<img id="pFIle" name="pFIle" alt="">
 											</div>
 										</td>
-										 -->
 										<!-- 이름 -->
 										<th scope="row" class="custom-th">
 											<label for="emp_nm" class="form-label">이름</label></th>
 										<td colspan="3" class="custom-td">
 											<input type="text" class="form-control w-75" id="emp_nm" name="name"></td>
-										
-										<th scope="row" class="custom-th">
-											<label for="emp_pass" class="form-label">비밀번호</label></th>
-										<td colspan="3" class="custom-td">
-											<input type="text" class="form-control w-75" id="emp_pass" name="passwd"></td>
 
 										<!-- 전화번호 -->
 										<th scope="row" class="custom-th">
@@ -66,32 +58,18 @@
 										</td>
 
 										<!-- 생년월일 -->
-										<!--
 										<th scope="row" class="custom-th">
-											<label for="emp_bd" class="form-label">생년월일</label></th>
+											<label for="emp_bd" class="form-label">주민등록번호</label></th>
 										<td colspan="3" class="custom-td">
-											<input type="text" class="form-control w-75" id="emp_bd" name="emp_bd" placeholder="생년월일 6자리 (예:950211)" maxlength="6">
-										</td>
-										-->
+											<input type="text" class="form-control w-75" id="emp_bd" name="resident" placeholder="(ex) 990101-1111111" maxlength="13"></td>
+									</tr>
+
+									<tr>
 										<!-- 성별 -->
-										
-										<!-- 
 										<th scope="row" class="custom-th">
-											<label for="emp_sb" class="form-label">성별</label></th>
+											<label for="emp_bd" class="form-label">패스워드</label></th>
 										<td colspan="3" class="custom-td">
-											<div class="form-check form-check-inline">
-												<input type="radio" class="form-check-input" id="emp_sb_m" name="emp_sb" value="남자"> 
-													<label class="form-check-label" for="emp_sb_m">남</label>
-											</div>
-											<div class="form-check form-check-inline">
-												<input type="radio" class="form-check-input" id="emp_sb_f" name="emp_sb" value="여자"> 
-													<label class="form-check-label" for="emp_sb_f">여</label>
-											</div>
-										</td>
-										 -->
-										 
-										 
-									
+											<input type="text" class="form-control w-75" id="emp_bd" name="passwd" placeholder="패스워드 입력" ></td>
 										<!-- 이메일 -->
 										<th scope="row">
 											<label for="emp_em" class="form-label">이메일</label></th>
@@ -100,41 +78,35 @@
 											<span id="checkEmailResult"></span>
 										</td>
 										<!-- 재직현황 -->
-										
-										<!-- 
 										<th scope="row">
 											<label for="emp_yn" class="form-label">재직현황</label></th>
 										<td colspan="3">
-											<select id="emp_yn" name="emp_yn" class="form-select w-75">
-												
+											<select id="emp_yn" name="status" class="form-select w-75">
+												<option value="재직" selected="">재직</option>
+												<option value="휴직" disabled="">휴직</option>
+												<option value="퇴사" disabled="">퇴사</option>
 											</select>
 										</td>
-										 -->
-										
 									</tr>
 								</tbody>
 								<tbody>
 									<tr>
 										<!-- ******************첨부파일*************************-->
-										<!-- 
-										
 										<td rowspan="3" class="text-center">
 											<div class="photo-wrapper-regist">
 												<input class="form-control" type="file" id="emp_pi" name="file1" onchange="employeePhoto(event);">
 											</div>
 										</td>
- -->
+
 										<!-- 부서명 -->
 										<th scope="row" class="custom-th">
 											<label for="dep_nm" class="form-label">부서명</label></th>
 										<td colspan="3">
 											<select id="dep_nm" name="deptId" class="form-select w-75">
-											
-												<option value="">부서명을 선택하세요</option> 
+												<option value="">부서명을 선택하세요</option>
 												<th:block th:each="departments : ${departments}">
 													<option th:value="${departments.id}" th:text="${departments.name}">
 												</th:block>
-												
 											</select>
 										</td>
 
@@ -149,12 +121,10 @@
 												</th:block>
 											</select>
 										</td>
-										<!-- 보안등급 -->
-										<!-- 
+										<!-- 보안등급 
+									
 										<th scope="row" class="custom-th">
-											<label for="emp_lv" class="form-label">보안등급</label>
-										</th>
-										
+											<label for="emp_lv" class="form-label">보안등급</label></th>
 										<td colspan="3">
 											<select id="emp_lv" name="emp_lv" class="form-select w-75">
 												<option value="">보안등급을 선택하세요</option>
@@ -164,40 +134,43 @@
 												<option value="4" disabled="">(4)관리자</option>
 											</select>
 										</td>
-									-->
-									
+										-->
 									</tr>
-										<!-- 우편번호 
+
 									<tr>
+										<!-- 우편번호 -->
 										<th scope="row">
 											<label for="emp_pc" class="form-label">우편번호</label></th>
 										<td colspan="3">
-											<input type="text" class="form-control w-75" id="emp_pc" name="emp_pc"></td>
+											<input type="text" class="form-control w-75" id="emp_pc" name="addrNum"></td>
 										<td colspan="3">
 											<button type="button" class="btn btn-primary btn-sm" id="btnSearchAddress">주소검색</button>
 										</td>
 									</tr>
-									-->
-									<!--
+
 									<tr>
-										 기본주소
+										<!-- 기본주소 -->
 										<th scope="row" class="custom-th">
 											<label for="emp_ad" class="form-label">기본주소</label></th>
 										<td colspan="3" class="custom-td">
-											<input type="text" class="form-control w-75" id="emp_ad" name="emp_ad"></td>
-											 -->
-										<!-- 상세주소 
+											<input type="text" class="form-control w-75" id="emp_ad" name="addr1"></td>
+										<!-- 상세주소 -->
 										<th scope="row" class="custom-th">
 											<label for="emp_ba" class="form-label">상세주소</label></th>
 										<td colspan="3" class="custom-td">
-											<input type="text" class="form-control w-75" id="emp_ba" name="emp_ba"></td>
+											<input type="text" class="form-control w-75" id="emp_ba" name="addr2"></td>
+											
+											<th scope="row" class="custom-th-r">
+											<label for="emp_hd" class="form-label">입사일</label></th>
+										<td colspan="3" class="custom-td">
+											<input type="date" class="form-control w-75" id="emp_hd" name="joinDate"></td>
 									</tr>
-									-->
 								</tbody>
 							</table>
 						
+							<br> <br>
 							<div align="right">
-								<button type="button" class="btn btn-primary btn-sm" onclick="history.back()">취소</button>
+								<button type="button" class="btn btn-secondary btn-icon-split" onclick="history.back()">취소</button>
 								<button type="submit" class="btn btn-primary btn-sm" id="registerBtn">등록</button>
 							</div>
 						</form>
@@ -208,8 +181,13 @@
 			</section>
 </th:block>
 
-<th:block layout:fragment="script">
+<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+    <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
-</th:block>
+    <script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
+
+    <script th:src="@{/js/sb-admin-2.min.js}"></script>
+
+    <th:block layout:fragment="script"></th:block>
 </body>
 </html>
