--- a/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
+++ b/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
@@ -36,7 +36,6 @@
 					<div class="card-body">
 
 						<form th:action="@{/appr}" th:object="${apprDTO}" method="post" enctype="multipart/form-data">
-							<input type="hidden" th:field="*{reqType}" />
 
 							<!-- 기안일 -->
 							<div class="form-group row">
@@ -63,26 +62,36 @@
 							<!-- 결재자 -->
 							<div class="form-group row">
 								<label class="col-sm-2 col-form-label">결재자</label>
-								<div class="col-sm-4">
-								
+								<div class="col-sm-2">
 									<div class="form-group position-relative">
 									  <input type="text" class="userSearch form-control" value="" placeholder="결재자 검색">
 									  <div class="searchResult list-group position-absolute w-100" style="z-index:999;"></div>
 									</div>
-									<!-- <a href="#" class="btn btn-primary btn-icon-split btn-sm" data-toggle="modal" data-target="#layerModal">
-										<span class="icon text-white-50"><i class="fas fa-external-link-alt"></i></span>
-										<span class="text">결재자 검색</span>
-									</a> -->
 									<!-- 선택된 결재자 표시 영역 -->
-									<div id="selectedUsers" class="mt-2"></div>
-									
+									<div id="selectedUsers" class="mt-2">
+										<button type="button" class="btn btn-sm btn-outline-success m-1" data-id="2025082229">인사하위레벨(본인)</button>
+									</div>
+
 									<!-- hidden input 담을 영역 -->
-									<div id="hiddenEmpIds"></div>
+									<div id="hiddenEmpIds">
+										<input type="hidden" name="empIds[]" value="2025082229">
+									</div>
+								</div>
+							</div>
+
+							<!-- 공통문서타입 -->
+							<div class="form-group row">
+								<label class="col-sm-2 col-form-label">양식 종류</label>
+								<div class="col-sm-2">
+									<select class="form-control selected-req-type" th:field="*{reqType}">
+										<option th:each="reqType : ${T(com.bootstrap.study.approval.constant.ApprReqType).values()}"
+												th:value="${reqType}" th:text="${reqType.label}"></option>
+									</select>
 								</div>
 							</div>
 
 							<!-- 휴가 종류 -->
-							<div class="form-group row">
+							<div class="form-group row vac">
 								<label class="col-sm-2 col-form-label">휴가 종류</label>
 								<div class="col-sm-2">
 									<select class="form-control" th:field="*{reqType}">
@@ -93,7 +102,7 @@
 							</div>
 
 							<!-- 기간 및 일시 -->
-							<div class="form-group row">
+							<div class="form-group row vac">
 								<label class="col-sm-2 col-form-label">기간 및 일시</label>
 								<div class="col-sm-3">
 									<div class="input-group date" id="startDate" data-target-input="nearest">
@@ -114,7 +123,7 @@
 							</div>
 
 							<!-- 반차 여부 -->
-							<div class="form-group row">
+							<div class="form-group row vac">
 								<label class="col-sm-2 col-form-label">반차 여부</label>
 								<div class="col-sm-8">
 									<div class="form-check form-check-inline" th:each="halfType : ${T(com.bootstrap.study.approval.constant.ApprHalfType).values()}">
@@ -125,7 +134,7 @@
 							</div>
 
 							<!-- 연차 일수 -->
-							<div class="form-group row">
+							<div class="form-group row vac">
 								<label class="col-sm-2 col-form-label">연차 일수</label>
 								<div class="col-sm-2">
 									<small>잔여연차</small>
@@ -238,14 +247,28 @@
 	        
 	        let $item = $(this);
 	        let $result = $item.closest(".searchResult");
-	        //let $input = $result.siblings(".userSearch");
-	        
+
 	        let id = $(this).data("id");
 	        let name = $(this).data("name");
 	        let dept = $(this).data("dept");
 	        let pos  = $(this).data("pos");
 
-	        //$input.val(`${name} (${dept} / ${pos})`);
+			// 중복 방지
+			if ($("#hiddenEmpIds input[value='" + id + "']").length > 0) {
+				alert("이미 선택된 결재자입니다.");
+				$result.empty();
+				$(".userSearch").val("");
+				return false;
+			}
+
+			// 참여 제한
+			if ($('input[name="empIds[]"]').length > 2) {
+				alert("결재자는 2명까지 선택가능합니다.");
+				$result.empty();
+				$(".userSearch").val("");
+				return false;
+			}
+
 	     // 버튼 추가 (Chip)
   		    let $btn = $(`
   		      <button type="button" class="btn btn-sm btn-outline-secondary m-1 selected-user" data-id="${id}">
@@ -259,6 +282,7 @@
   		  	$("#hiddenEmpIds").append($hidden);
   		  	
 	        $result.empty();
+			$(".userSearch").val("");
 		});
 		
 
@@ -268,7 +292,24 @@
 	      $(this).remove();
 	      $("#hiddenEmpIds input[value='" + empId + "']").remove();
 	    });
-	   
+
+		// 양식타입 변경
+		$(document).on("change", ".selected-req-type", function () {
+			let sel_val = $(this).val();
+
+			if (sel_val === 'VACATION')
+			{
+				$('.vac input[type="text"], .vac select, .vac input[type="radio"]').prop('disabled', false);
+				$(".vac").show();
+			}
+			else
+			{
+				$('.vac input[type="text"], .vac select, .vac input[type="radio"]').prop('disabled', true);
+				$(".vac").hide();
+			}
+
+
+		});
 	});
 	
 	
