--- a/bootstrap_stater/src/main/resources/templates/approval/appr_doc_list.html
+++ b/bootstrap_stater/src/main/resources/templates/approval/appr_doc_list.html
@@ -39,14 +39,14 @@
                         </tr>
                         </tfoot>
                         <tbody>
-                        <tr>
+                        <tr th:each="reqType : ${T(com.bootstrap.study.approval.constant.ApprReqType).values()}">
                             <td>00</td>
                             <td>
-                                <a class=""
+                                <a class="openReqType"
                                    data-toggle="modal"
-                                   href="#" onclick="location.href='drafting_form.html'"
-                                   th:onclick="window.open('/approval/new', 'window_name', 'width=1138, height=642, location=no, status=no, scrollbars=yes')">
-                                    휴가신청서
+                                   th:text="${reqType.label}"
+                                   href="#"
+                               	   th:data-item-id="${reqType}">
                                 </a>
                             </td>
                             <td></td>
@@ -76,7 +76,22 @@
 </th:block>
 
 <th:block layout:fragment="script">
+	<script>
+		$(function() {
+			// 상품 목록에서 상품 클릭 시 상세정보 조회 요청
+			$(".openReqType").click(function() {
+			    const reqTypeVal = this.dataset.itemId;
 
+			    window.open(
+			        `/approval/new/${reqTypeVal}`,      // URL
+			        'drafting_form',                // 창 이름
+			        'width=1138,height=642,location=no,status=no,scrollbars=yes'  // 옵션 문자열
+			    );
+			});
+
+		});
+
+	</script>
 </th:block>
 </body>
 </html>
