내결재목록 추가

--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -106,7 +106,7 @@
 
                         <h6 class="collapse-header">전자결재 메뉴:</h6>
                        	<a class="collapse-item" th:href="@{/approval/doc_list}">기안작성</a>
-                        <a class="collapse-item" th:href="@{/approval/approval_list}">내결재관리</a>
+                        <a class="collapse-item" th:href="@{/approval/approval_list}">인사결재 통합관리</a>
                     </div>
                 </div>
             </li>
