--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -87,7 +87,8 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">근태관리 메뉴:</h6>
                         <a class="collapse-item" th:href="@{/attendance/commuteList}">출퇴근확인</a>
-                        <a class="collapse-item" th:href="@{/attendance/attendanceList}">나의 근태 내역</a>
+<!--                         <a class="collapse-item" th:href="@{/attendance/attendanceList}">나의 근태 내역</a> -->
+                        <a class="collapse-item" th:href="@{/attendance/adminCommute}">관리자 근태관리</a>
                         <a class="collapse-item" th:href="@{/attendance/annualList}">연차 관리</a>
                         <div class="collapse-divider"></div>
                     </div>
