--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelRegist.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelRegist.html
@@ -60,7 +60,7 @@
 										<th scope="row" class="custom-th">
 											<label for="emp_bd" class="form-label">주민등록번호</label></th>
 										<td colspan="3" class="custom-td">
-											<input type="text" class="form-control w-75" id="emp_bd" name="resident" placeholder="(ex) 990101-1111111" maxlength="13"></td>
+											<input type="text" class="form-control w-75" id="emp_bd" name="resident" placeholder="(ex) 990101-1111111" maxlength="14"></td>
 									</tr>
 
 									<tr>
@@ -81,9 +81,9 @@
 											<label for="emp_yn" class="form-label">재직현황</label></th>
 										<td colspan="3">
 											<select id="emp_yn" name="status" class="form-select w-75">
-												<option value="재직" selected="">재직</option>
-												<option value="휴직" disabled="">휴직</option>
-												<option value="퇴사" disabled="">퇴사</option>
+												<th:block th:each=" status: ${status}">
+													<option th:value="${status.comDtId}" th:text="${status.comDtNm}">
+												</th:block>
 											</select>
 										</td>
 									</tr>
@@ -104,7 +104,7 @@
 											<select id="dep_nm" name="deptId" class="form-select w-75">
 												<option value="">부서명을 선택하세요</option>
 												<th:block th:each="departments : ${departments}">
-													<option th:value="${departments.id}" th:text="${departments.name}">
+													<option th:value="${departments.comDtId}" th:text="${departments.comDtNm}">
 												</th:block>
 											</select>
 										</td>
@@ -116,7 +116,7 @@
 											<select id="emp_gd" name="posId" class="form-select w-75">
 												<option value="">직책을 선택하세요</option>
 												<th:block th:each="position : ${position}">
-													<option th:value="${position.id}" th:text="${position.name}">
+													<option th:value="${position.comDtId}" th:text="${position.comDtNm}">
 												</th:block>
 											</select>
 										</td>
